// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with logo 1`] = `
<DocumentFragment>
  <a
    class="AuthorCard-authors card"
    href="/authors/rithm"
  >
    <div
      class="card-body-authors"
    >
      <h6
        class="card-title-authors"
      >
        Rithm School
      </h6>
      <p>
        <small>
          Become an exceptional developer in 16 weeks.
        </small>
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`matches snapshot without logo 1`] = `
<DocumentFragment>
  <a
    class="AuthorCard-authors card"
    href="/authors/algo"
  >
    <div
      class="card-body-authors"
    >
      <h6
        class="card-title-authors"
      >
        Algo School
      </h6>
      <p>
        <small>
          Become a mediocre developer in 160 weeks.
        </small>
      </p>
    </div>
  </a>
</DocumentFragment>
`;
